syntax = "proto3";

option csharp_namespace = "GrpcCatalog";

package Catalog.Common;

message GrpcEmptyRequest {
}
message GrpcByIdRequest {
    string Id = 1;
}
message GrpcBySlugRequest {
    string Slug = 1;
}
message GrpcPagingRequest {
    int32 PageNumber = 1;
    int32 PageSize = 2;
}
message GrpcPagingBySlugRequest {
    int32 PageNumber = 1;
    int32 PageSize = 2;
    string Slug = 3;
}